<resources>
    <string name="app_name">Netflix</string>
    <string name="menu_mensagem">Mensagem</string>
    <string name="menu_volume">Menu Volume</string>
    <string name="menu_avaliações">Menu avaliação</string>
    <string name="menu_ep">Menu de episódios</string>
    <string name="houseofcards">House of Cards</string>
    <string name="ep">episódios</string>
    <string name="ep_n">episodios_n</string>
    <string name="house_of_cards">House of Cards</string>
    <string name="s1_e2">S1:E2</string>
</resources>
